@@ -17,26 +17,21 @@
 
 package ch.dvbern.stip.api.common.authorization;
 
-import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.function.BooleanSupplier;
 
 import ch.dvbern.stip.api.benutzer.service.BenutzerService;
 import ch.dvbern.stip.api.common.authorization.util.AuthorizerUtil;
-import ch.dvbern.stip.api.common.authorization.util.DokumentAuthorizerUtil;
 import ch.dvbern.stip.api.dokument.repo.DokumentRepository;
 import ch.dvbern.stip.api.dokument.repo.GesuchDokumentHistoryRepository;
 import ch.dvbern.stip.api.dokument.repo.GesuchDokumentRepository;
-import ch.dvbern.stip.api.gesuchstatus.service.GesuchStatusService;
+import ch.dvbern.stip.api.dokument.type.Dokumentstatus;
 import ch.dvbern.stip.api.gesuchstatus.type.Gesuchstatus;
 import ch.dvbern.stip.api.gesuchtranche.repo.GesuchTrancheRepository;
 import ch.dvbern.stip.api.gesuchtranche.type.GesuchTrancheStatus;
 import ch.dvbern.stip.api.gesuchtranche.type.GesuchTrancheTyp;
 import ch.dvbern.stip.api.sozialdienst.service.SozialdienstService;
-import io.quarkus.security.ForbiddenException;
 import jakarta.enterprise.context.ApplicationScoped;
-import jakarta.transaction.Transactional;
 import jakarta.ws.rs.NotFoundException;
 import lombok.RequiredArgsConstructor;
 
@@ -46,34 +41,33 @@ import lombok.RequiredArgsConstructor;
 public class GesuchDokumentAuthorizer extends BaseAuthorizer {
     private final GesuchTrancheRepository gesuchTrancheRepository;
     private final BenutzerService benutzerService;
-    private final GesuchStatusService gesuchStatusService;
     private final GesuchDokumentRepository gesuchDokumentRepository;
     private final GesuchDokumentHistoryRepository gesuchDokumentHistoryRepository;
     private final SozialdienstService sozialdienstService;
     private final DokumentRepository dokumentRepository;
 
-    @Transactional
-    public void canCreateGesuchDokument(final UUID gesuchTrancheId) {
-        final var currentBenutzer = benutzerService.getCurrentBenutzer();
+    public void assertGsCanModifyDokumentOfTranche(final UUID gesuchTrancheId) {
         final var gesuchTranche = gesuchTrancheRepository.requireById(gesuchTrancheId);
         final var gesuch = gesuchTranche.getGesuch();
-
-        final BooleanSupplier canBenutzerUpload =
-            () -> gesuchStatusService.benutzerCanUploadDokument(currentBenutzer, gesuch.getGesuchStatus())
-            || gesuchTranche.getTyp() == GesuchTrancheTyp.AENDERUNG;
+        final var currentBenutzer = benutzerService.getCurrentBenutzer();
 
         if (
-            DokumentAuthorizerUtil.isDelegiertAndCanUploadOrDelete(
-                gesuch,
-                currentBenutzer,
-                canBenutzerUpload,
-                this::forbidden,
-                sozialdienstService
-            )
+            !AuthorizerUtil
+                .isGesuchstellerOfOrDelegatedToSozialdienst(gesuch, currentBenutzer, sozialdienstService)
+        ) {
+            forbidden();
+        }
+
+        if (
+            gesuchTranche.getTyp() == GesuchTrancheTyp.TRANCHE
+            && Gesuchstatus.GESUCHSTELLER_CAN_MODIFY_DOKUMENT.contains(gesuch.getGesuchStatus())
         ) {
             return;
-        } else if (
-            AuthorizerUtil.isGesuchstellerOfGesuch(currentBenutzer, gesuch) && canBenutzerUpload.getAsBoolean()
+        }
+
+        if (
+            gesuchTranche.getTyp() == GesuchTrancheTyp.AENDERUNG
+            && GesuchTrancheStatus.GESUCHSTELLER_CAN_MODIFY_DOKUMENT.contains(gesuchTranche.getStatus())
         ) {
             return;
         }
@@ -81,66 +75,46 @@ public class GesuchDokumentAuthorizer extends BaseAuthorizer {
         forbidden();
     }
 
-    @Transactional
+    public void canCreateGesuchDokument(final UUID gesuchTrancheId) {
+        assertGsCanModifyDokumentOfTranche(gesuchTrancheId);
+    }
+
     public void canDeleteDokument(final UUID dokumentId) {
         final var dokument = dokumentRepository.findByIdOptional(dokumentId).orElseThrow(NotFoundException::new);
-        final var gesuchTranche = dokument.getGesuchDokumente().get(0).getGesuchTranche();
-        final var gesuch = gesuchTranche.getGesuch();
-        final var currentBenutzer = benutzerService.getCurrentBenutzer();
+        final var gesuchDokument = dokument.getGesuchDokumente().getFirst();
+        final var gesuchTranche = gesuchDokument.getGesuchTranche();
 
-        final BooleanSupplier canBenutzerDeleteDokument =
-            () -> gesuchStatusService.benutzerCanDeleteDokument(currentBenutzer, gesuch.getGesuchStatus())
-            || gesuchTranche.getTyp() == GesuchTrancheTyp.AENDERUNG;
-
-        if (
-            DokumentAuthorizerUtil.isDelegiertAndCanUploadOrDelete(
-                gesuch,
-                currentBenutzer,
-                canBenutzerDeleteDokument,
-                this::forbidden,
-                sozialdienstService
-            )
-        ) {
-            return;
-        } else if (
-            AuthorizerUtil.isGesuchstellerOfGesuch(currentBenutzer, gesuch) && canBenutzerDeleteDokument.getAsBoolean()
-        ) {
+        assertGsCanModifyDokumentOfTranche(gesuchTranche.getId());
+        if (gesuchDokument.getStatus() == Dokumentstatus.AUSSTEHEND) {
             return;
         }
 
         forbidden();
     }
 
-    @Transactional
     public void canUpdateGesuchDokument(UUID gesuchDokumentId) {
-        final var currentBenutzer = benutzerService.getCurrentBenutzer();
-
-        if (!isAdminOrSb(currentBenutzer)) {
-            throw new ForbiddenException();
-        }
         final var gesuchDokument = gesuchDokumentRepository.requireById(gesuchDokumentId);
-
         final var trancheTyp = gesuchDokument.getGesuchTranche().getTyp();
 
-        if (trancheTyp == GesuchTrancheTyp.TRANCHE) {
-            AuthorizerUtil.gesuchStatusOneOfOrElseThrow(
-                gesuchDokument.getGesuchTranche().getGesuch(),
-                List.of(Gesuchstatus.IN_BEARBEITUNG_SB)
-            );
-        } else if (trancheTyp == GesuchTrancheTyp.AENDERUNG) {
-            AuthorizerUtil.gesuchTrancheStatusOneOfOrElseThrow(
-                gesuchDokument.getGesuchTranche(),
-                List.of(GesuchTrancheStatus.UEBERPRUEFEN)
-            );
+        if (
+            trancheTyp == GesuchTrancheTyp.TRANCHE
+            && gesuchDokument.getGesuchTranche().getGesuch().getGesuchStatus() == Gesuchstatus.IN_BEARBEITUNG_SB
+        ) {
+            return;
         }
+        if (
+            trancheTyp == GesuchTrancheTyp.AENDERUNG
+            && gesuchDokument.getGesuchTranche().getStatus() == GesuchTrancheStatus.UEBERPRUEFEN
+        ) {
+            return;
+        }
+        forbidden();
     }
 
-    @Transactional
     public void canGetGesuchDokumentKommentar(final UUID gesuchDokumentId) {
         final var currentBenutzer = benutzerService.getCurrentBenutzer();
-
-        // Admins and Sachbearbeiter can always read every Gesuch
-        if (isAdminSbOrJurist(currentBenutzer)) {
+        // Sachbearbeiter and Jurists can always read every Gesuch
+        if (isSbOrJurist(currentBenutzer)) {
             return;
         }
 
@@ -151,7 +125,7 @@ public class GesuchDokumentAuthorizer extends BaseAuthorizer {
 
         final var gesuch = gesuchDokument.getGesuchTranche().getGesuch();
         if (
-            AuthorizerUtil.isGesuchstellerOrDelegatedToSozialdienst(
+            AuthorizerUtil.isGesuchstellerOfOrDelegatedToSozialdienst(
                 gesuch,
                 currentBenutzer,
                 sozialdienstService
@@ -163,16 +137,15 @@ public class GesuchDokumentAuthorizer extends BaseAuthorizer {
         forbidden();
     }
 
-    @Transactional
     public void canGetGesuchDokumentForTranche(final UUID gesuchTrancheId) {
         final var currentBenutzer = benutzerService.getCurrentBenutzer();
-        if (isAdminSbOrJurist(currentBenutzer)) {
+        if (isSbOrJurist(currentBenutzer)) {
             return;
         }
 
         final var gesuchTranche = gesuchTrancheRepository.requireById(gesuchTrancheId);
         if (
-            AuthorizerUtil.isGesuchstellerOrDelegatedToSozialdienst(
+            AuthorizerUtil.isGesuchstellerOfOrDelegatedToSozialdienst(
                 gesuchTranche.getGesuch(),
                 currentBenutzer,
                 sozialdienstService
